hphp/hack/test/typecheck/is_expression/invalid_hint_generic.php.like_types.exp
File "invalid_hint_generic.php", line 5, characters 5-15:
  T
  where T super dynamic
File "invalid_hint_generic.php", line 4, characters 13-13:
Invalid "is" expression hint (Typing[4195])
File "invalid_hint_generic.php", line 4, characters 13-13:
The "is" operator cannot be used with an erased generic type parameter
